[gd_scene load_steps=3 format=3 uid="uid://bkmqucxr47h7v"]

[ext_resource type="FontFile" uid="uid://b3gkr4y1p5gca" path="res://assets/Kenney Bold.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://f7xe37b7vvhv" path="res://hud.gd" id="1_64ctp"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="TimeLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 32
text = "30"
horizontal_alignment = 2

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -36.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 48
text = "CoinDash!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -242.0
offset_right = 94.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 36
text = "Start
"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
